@@ -7,9 +7,6 @@ Planned Features/Changes:
 
   * Integrate Jacob's updated circuit simulator.
 
-  * After checker finishes, cache scores in problemstate logs (to prevent
-    having to do a double lookup to find scores).
-
   * Implement relative due dates
 
   * Implement a better method for course-specific defaults for questions.
